added delete function (right-button popup menu)

--- a/todo.txt
+++ b/todo.txt
@@ -9,13 +9,16 @@ DONE 作品保存载入
 DONE 自定义图形（动态）下拉框
 DONE 铅笔
 DONE 铅笔拖动BUG
+DONE 清除图形
+DONE 右键菜单
 
 撤销重做(命令模式)
 
 dll插件模式
 
-清除图形
-
 清除画布
 
 橡皮擦
+
+类工厂优化
+
