--- a/todo.txt
+++ b/todo.txt
@@ -12,13 +12,14 @@ DONE 铅笔拖动BUG
 DONE 清除图形
 DONE 右键菜单
 
-撤销重做(命令模式)
+撤销重做(命令模式)：增加（画图）、删除、修改（拖动、旋转、画笔画刷风格修改）
 
 dll插件模式
 
 清除画布
 
-橡皮擦
+橡皮擦（~清除图形）
 
 类工厂优化
 
+画笔、画刷一键恢复默认值
