added undo/redo: set brush to pen

--- a/todo.txt
+++ b/todo.txt
@@ -11,8 +11,7 @@ DONE 铅笔
 DONE 铅笔拖动BUG
 DONE 清除图形
 DONE 右键菜单
-
-撤销重做(命令模式)：增加（画图）、删除、修改（拖动、旋转、画笔画刷风格修改）
+DONE 撤销重做(命令模式)：增加（画图）、删除、修改（拖动、旋转、画笔画刷风格修改）
 
 dll插件模式
 
@@ -20,6 +19,6 @@ dll插件模式
 
 橡皮擦（~清除图形）
 
-类工厂优化
+增加类工厂（和策略模式可能有冲突）
 
 画笔、画刷一键恢复默认值
